2010-04-07 arne

	* removed COffscreenContext in CViewContainer & CVUMeter as it is not needed there anymore
	* added IPlatformBitmapPixelAccess for those who needs to alter pixels of a bitmap directly
	* changed CLineStyle to support more than solid and dotted lines

2010-03-20 arne

	* add documentation for the animation support
	* initial Direct2D support for Windows

2010-03-03 arne

	* redesign for onMouseEntered and onMouseExited in CFrame. The new implementation calls all views on enter or exit.
	  That means if a view is embedded into a viewcontainer and has the same size as its parent if the mouse enters this view the parent will also get a onMouseEntered call.
	  In the previous implementation only the view did get called not its parents
	* tooltip support is now moved into CFrame and you can enable or disable it via CFrame::enableTooltips (state)
	
2010-02-21 arne

	* new animation classes
	* using mach_absolute_time() instead of TickCount() for IPlatformFrame::getTicks() for Mac OS X
	* fix drawing bitmaps with globalAlpha value other than 1 on Mac OS X
	
2010-02-17 arne

	* new alphaValue member for CView which affects the opaqueness when drawing
	* new optional virtual methods in CControlListener: controlTagWillChange and controlTagDidChange
	* added CFrame::close() method. Should be called instead of CFrame::forget() when you want make sure to detach the platform view from its parent
	* CScrollView draws its border with the background color, not with black anymore
	* focus handling change: a view which says wantsFocus() gets focus on mouse down now. A control does not set itself as focus view if beginEdit is called.

2010-02-03 arne

	* implementation for sizeToFit() for all controls
	* new CView::doDrag() implementation for starting a drag

2010-01-24 arne

	* added CControl::setValueNormalized() and CControl::getValueNormalized()
	* added key event handling to CHorizontalSwitch, CVerticalSwitch, CRockerSwitch, CMovieButton