@@ -57,7 +57,7 @@ Later added as binary libraries to the official VST SDK.
 Since May 2003 VSTGUI is open source and hosted at sourceforge.
 
 Currently VSTGUI compiles on
-\par Microsoft Windows (with Visual Studio)
+\par Microsoft Windows (with Visual Studio and Windows 7 Platform SDK)
 - XP (32 and 64 bit)
 - Vista (32 and 64 bit)
 - 7 (32 and 64 bit)
