@@ -1,3 +1,8 @@
+2010-04-09 arne
+
+	* Direct2D menu icon implementation
+	* fix memory leak in Windows when using icons in menus
+	
 2010-04-07 arne
 
 	* removed COffscreenContext in CViewContainer & CVUMeter as it is not needed there anymore
